--- a/app/src/main/res/layout/item_details_fragment.xml
+++ b/app/src/main/res/layout/item_details_fragment.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.35" />
+            app:layout_constraintGuide_percent="0.3" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -59,7 +59,6 @@
                 android:id="@+id/item_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/title_std"
                 android:textSize="24sp"
@@ -90,7 +89,7 @@
                 android:text="@string/price"
                 android:textColor="#005BA3"
                 android:textSize="24sp"
-                app:layout_constraintBottom_toTopOf="@+id/details_guideline"
+                app:layout_constraintBottom_toTopOf="@+id/itemLocation"
                 app:layout_constraintStart_toStartOf="@+id/item_location"
                 app:layout_constraintTop_toBottomOf="@+id/item_location" />
 
@@ -111,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:visibility="visible"
-                app:layout_constraintGuide_percent="0.35"
+                app:layout_constraintGuide_percent="0.5"
                 tools:visibility="visible" />
 
             <TextView
@@ -216,8 +215,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/location"
                 app:layout_constraintBaseline_toBaselineOf="@+id/item_location_details"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintEnd_toEndOf="@+id/item_subcategory_value"
                 app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
             <TextView
@@ -235,13 +233,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.8" />
+                app:layout_constraintGuide_percent="0.85" />
 
             <TextView
                 android:id="@+id/item_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/description_header"
                 android:textSize="20sp"
@@ -266,12 +263,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:text="@string/status_header"
-                app:layout_constraintBottom_toTopOf="@+id/details_guideline"
-                app:layout_constraintStart_toStartOf="@+id/details_value_guideline"
-                app:layout_constraintTop_toBottomOf="@+id/item_location" />
+                app:layout_constraintBaseline_toBaselineOf="@+id/item_price"
+                app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
             <TextView
                 android:id="@+id/item_status"
@@ -282,6 +276,15 @@
                 app:layout_constraintBottom_toBottomOf="@+id/statusView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/statusView" />
+
+            <com.example.myapplication.CustomMapView
+                android:id="@+id/itemLocation"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/details_guideline"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/item_price" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
