--- a/app/src/main/res/layout-land/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout-land/item_details_buy_fragment.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.4" />
+                app:layout_constraintGuide_percent="0.3" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/central_guideline"
@@ -225,7 +225,7 @@
                     android:fontFamily="sans-serif-light"
                     android:text="@string/item_condition"
                     app:layout_constraintBottom_toTopOf="@+id/description_guideline"
-                    app:layout_constraintStart_toStartOf="@+id/item_title"
+                    app:layout_constraintStart_toStartOf="@+id/item_expire_date"
                     app:layout_constraintTop_toBottomOf="@+id/item_expire_date" />
 
                 <androidx.constraintlayout.widget.Guideline
@@ -332,6 +332,15 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/details_guideline"
                     tools:text="BUY" />
+
+                <com.example.myapplication.CustomMapView
+                    android:id="@+id/customMapView"
+                    android:layout_width="0dp"
+                    android:layout_height="200dp"
+                    app:layout_constraintBottom_toTopOf="@id/main_characteristics"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/buyButton" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
