--- a/app/src/main/res/layout-large/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout-large/item_details_buy_fragment.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.4" />
+            app:layout_constraintGuide_percent="0.1" />
 
         <TextView
             android:id="@+id/item_title"
@@ -288,7 +288,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.65" />
+                app:layout_constraintGuide_percent="0.2" />
 
             <TextView
                 android:id="@+id/item_description"
@@ -334,11 +334,20 @@
                 android:backgroundTint="#FFC107"
                 android:text="BUY"
                 android:textAlignment="center"
-                app:layout_constraintBottom_toTopOf="@+id/main_characteristics"
+                app:layout_constraintBottom_toTopOf="@+id/itemLocation"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="BUY" />
+
+            <com.example.myapplication.CustomMapView
+                android:id="@+id/itemLocation"
+                android:layout_width="0dp"
+                android:layout_height="200dp"
+                app:layout_constraintBottom_toTopOf="@id/details_guideline"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/buyButton" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
