--- a/app/src/main/res/layout/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout/item_details_buy_fragment.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.4" />
+                app:layout_constraintGuide_percent="0.2" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout"
@@ -134,7 +134,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:visibility="visible"
-                    app:layout_constraintGuide_percent="0.35"
+                    app:layout_constraintGuide_percent="0.2"
                     tools:visibility="visible" />
 
                 <TextView
@@ -258,7 +258,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    app:layout_constraintGuide_percent="0.8" />
+                    app:layout_constraintGuide_percent="0.7" />
 
                 <TextView
                     android:id="@+id/item_description"
@@ -331,6 +331,16 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/details_guideline"
                     tools:text="BUY" />
+
+                <com.example.myapplication.CustomMapView
+                    android:id="@+id/itemLocation"
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintBottom_toTopOf="@+id/main_characteristics"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/buyButton" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
