--- a/app/src/main/res/layout-land/fragment_show_profile.xml
+++ b/app/src/main/res/layout-land/fragment_show_profile.xml
@@ -55,7 +55,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="0"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/userRatingBar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/userRatingBar"
