--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -162,6 +162,20 @@
             app:constraint_referenced_ids="textViewFullNameEditProfile,textViewUserEmailEditProfile,textViewUserLocationEditProfile,textViewUsernameEditProfile"
             tools:layout_editor_absoluteX="379dp" />
 
+        <Button
+            android:id="@+id/buttonLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Locate me"
+            tools:layout_editor_absoluteX="138dp"
+            app:layout_constraintStart_toStartOf="@id/guideline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/editViewUserLocationEditProfile"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.15"
+            app:layout_constraintHorizontal_bias="0.0"
+            tools:layout_editor_absoluteY="209dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageButton
@@ -186,6 +200,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="125dp"
         android:layout_height="150dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline7" />
